crates/rargc/tests/snapshots/test_scripts__impl-43.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] commands.sh d example.com -f ./output"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
# this file is located in './crates/rargc/examples/output.sh'
# you can edit it freely and regenerate (it will not be overwritten)
args:
- ${args[--force]} = 1
- ${args[source]} = example.com
- ${args[target]} = ./output

